BR-1874 Enable requesting fees when in test