@@ -237,14 +237,16 @@ public class DibsClient
     msg.put("currency", codeOf(currency));
     msg.put("capturenow", "yes");
     msg.put("uniqueoid", "yes");
-//    msg.put("calcfee", "yes");
 
     // cf. http://tech.dibspayment.com/D2/FlexWin/API/MD5
     String md5key = md5of("merchant=" + getMerchantId() + "&orderid=" + orderId + "&ticket=" + accountId + "&currency=" + codeOf(currency) + "&amount=" + cents);
     msg.put("md5key", md5key);
 
     if (isTesting())
+    {
       msg.put("test", "yes");
+      msg.put("calcfee", "yes");
+    }
 
     // Query the DIBS server
     Map result = post("/cgi-ssl/ticket_auth.cgi", msg, false);
@@ -258,9 +260,12 @@ public class DibsClient
     if (StringUtils.isEmpty(transact))
       throw new DibsException("Withdrawal " + status + " without transaction: " + message, (String)result.get("reason"), (String)result.get("actioncode"));
 
-//    Long feeCents = Long.valueOf((String)result.get("fee"));
-//    final BigDecimal feeAmount = new BigDecimal(feeCents).scaleByPowerOfTen(-2);
-    final BigDecimal feeAmount = BigDecimal.ZERO;
+    String reportedFee = (String)result.get("fee");
+    Long feeCents = reportedFee != null
+                  ? Long.valueOf(reportedFee)
+                  : new Long(0);
+
+    final BigDecimal feeAmount = new BigDecimal(feeCents).scaleByPowerOfTen(-2);
     final Long transactionId = Long.valueOf(transact);
 
     return new TransactionInfo()
